--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@rrweb/rrweb-plugin-console-record": "^2.0.0-alpha.18",
-    "@rrweb/rrweb-plugin-console-replay": "^2.0.0-alpha.18",
     "@tailwindcss/vite": "^4.1.12",
+    "chii": "^1.15.5",
+    "chobitsu": "^1.8.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "idb": "^8.0.3",
@@ -43,6 +43,7 @@
     "@types/react-dom": "^19.1.3",
     "@wxt-dev/module-react": "^1.1.3",
     "typescript": "^5.8.3",
+    "vite-plugin-static-copy": "^3.1.2",
     "wxt": "^0.20.6"
   }
 }
